# OpenSourceCryptoSignals

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-python-package.yml  python-package.yml
crypto_market_scanner/: __init__.py  arbitrage.py  cli.py  coingecko.py  scanner.py
examples/: sample_markets.csv  sample_quotes.csv
tests/: test_cli.py  test_coingecko.py  test_scanner.py
