[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-source-crypto-signals"
version = "0.1.0"
description = "A lightweight CLI scanner for crypto trading opportunities."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "OpenSourceCryptoSignals contributors"}]

[project.scripts]
crypto-scan = "crypto_market_scanner.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
